final innan inlagd text

--- a/sights/index.html
+++ b/sights/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Sights</title>
 </head>
 
 <body>
     <header class="topnav" id="myTopnav">
 
-        <a href="/" id="homeBtn"></a>
-        <a href="/">Home</a>
-        <a href="/traditions/">traditions</a>
-        <a href="/sights/" class="active">Sights</a>
-        <a href="/culture/">culture</a>
+        <a href="../" id="homeBtn"></a>
+        <a href="../">Home</a>
+        <a href="../traditions/">traditions</a>
+        <a href="../sights/" class="active">Sights</a>
+        <a href="../culture/">culture</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
@@ -26,15 +26,21 @@
     <section class="SightSection" id="s1">
         <article>
             <figure>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg" alt="Picture of the Hong Kong Skyline">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg"
+                    alt="Picture of the Hong Kong Skyline">
                 <figcaption>
-                    <span><a href="https://commons.wikimedia.org/wiki/File:Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg">Aaron Zhu</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia Commons</span>
+                    <span><a
+                            href="https://commons.wikimedia.org/wiki/File:Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg">Aaron
+                            Zhu</a>,
+                        <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia
+                        Commons</span>
                 </figcaption>
             </figure>
             <div>
                 <h1>The Skyline</h1>
                 <h2>The best places two to enjoy the beautiful skyline of Hong Kong are Victoria Peak and the Star Ferry
-                    ride along the waters surrounding the city. </h2> <p> Victoria Peak is the highest hill on the Island allowing
+                    ride along the waters surrounding the city. </h2>
+                <p> Victoria Peak is the highest hill on the Island allowing
                     for an incredible view of the energetic and noisy city and skyscrapers. The Star Ferry is a ferry
                     with origins back in 1880, the skillful drivers are experts at navigating the usually busy waters
                     giving a full showcase of the Skyline. This is one of the best deals you can get in Hong Kong
@@ -52,9 +58,11 @@
             <figure>
 
                 <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Hongkong_-_park_-_panoramio.jpg"
-                alt="Picture of Hong Kong Park">
+                    alt="Picture of Hong Kong Park">
                 <figcaption>
-                    <span><a href="https://commons.wikimedia.org/wiki/File:Hongkong_-_park_-_panoramio.jpg">Pavel Špindler</a>, <a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>, via Wikimedia Commons</span>
+                    <span><a href="https://commons.wikimedia.org/wiki/File:Hongkong_-_park_-_panoramio.jpg">Pavel
+                            Špindler</a>, <a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>, via
+                        Wikimedia Commons</span>
                 </figcaption>
             </figure>
             <div>
@@ -74,9 +82,11 @@
         <article>
             <figure>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Tian_Tan_Buddha_by_Beria.jpg"
-                alt="Picture of Big Buddha Statue in Hong Kong">
+                    alt="Picture of Big Buddha Statue in Hong Kong">
                 <figcaption>
-                    <span><a href="https://commons.wikimedia.org/wiki/File:Tian_Tan_Buddha_by_Beria.jpg">Béria L. Rodríguez</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia Commons</span>
+                    <span><a href="https://commons.wikimedia.org/wiki/File:Tian_Tan_Buddha_by_Beria.jpg">Béria L.
+                            Rodríguez</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>,
+                        via Wikimedia Commons</span>
                 </figcaption>
             </figure>
             <div>
@@ -109,6 +119,6 @@
         </ul>
     </footer>
 </body>
-<script src="/src/index.js"></script>
+<script src="../src/index.js"></script>
 
 </html>
