--- a/traditions/index.html
+++ b/traditions/index.html
@@ -154,19 +154,23 @@
       </article>
     </main>
     <footer>
-      <h1>Footer</h1>
       <ul>
         <li>
-          <p>link 1</p>
+          <p>&copy; CCP</p>
         </li>
         <li>
-          <p>link 2</p>
+          <a href="https://youtu.be/dQw4w9WgXcQ" target="_blank"
+            >Terms of Service</a
+          >
         </li>
         <li>
-          <p>link 3</p>
+          <a href="#">Contact</a>
         </li>
         <li>
-          <p>link 4</p>
+          <a href="#">Licenses</a>
+        </li>
+        <li>
+          <a href="#">Privacy</a>
         </li>
       </ul>
     </footer>
