--- a/traditions/index.html
+++ b/traditions/index.html
@@ -156,7 +156,7 @@
     <footer>
       <ul>
         <li>
-          <p>&copy; CCP</p>
+          <p>&copy; Company Corporation</p>
         </li>
         <li>
           <a href="https://youtu.be/dQw4w9WgXcQ" target="_blank"
@@ -164,13 +164,19 @@
           >
         </li>
         <li>
-          <a href="#">Contact</a>
+          <a
+            href="https://www.google.com/maps/place/Cock+Island/@53.8376475,-9.3601112,15z/data=!3m1!4b1!4m5!3m4!1s0x48596712e291a56f:0x31d29d9bbfddb735!8m2!3d53.8376357!4d-9.3513564"
+            target="_blank"
+            >Contact</a
+          >
         </li>
         <li>
-          <a href="#">Licenses</a>
+          <a href="https://www.watching-grass-grow.com/" target="_blank"
+            >Licenses</a
+          >
         </li>
         <li>
-          <a href="#">Privacy</a>
+          <a href="https://youtu.be/71NAThAf5yw" target="_blank">Privacy</a>
         </li>
       </ul>
     </footer>
