glömde punkter vid några sökvägar

--- a/traditions/index.html
+++ b/traditions/index.html
@@ -14,11 +14,11 @@
   </head>
   <body class="trads-body">
     <header class="topnav" id="myTopnav">
-      <a href="/" id="homeBtn"></a>
-      <a href="/">Home</a>
-      <a href="/traditions/" class="active">traditions</a>
-      <a href="/sights/">Sights</a>
-      <a href="/culture/">culture</a>
+      <a href="./" id="homeBtn"></a>
+      <a href="./">Home</a>
+      <a href="./traditions/" class="active">traditions</a>
+      <a href="./sights/">Sights</a>
+      <a href="./culture/">culture</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
