--- a/culture/index.html
+++ b/culture/index.html
@@ -15,8 +15,8 @@
   </head>
   <body class="culture-body" id="Body">
     <header class="topnav" id="myTopnav">
-      <a href="../" id="homeBtn"></a>
-      <a href="../">Home</a>
+      <a href="./" id="homeBtn"></a>
+      <a href="./">Home</a>
       <a href="../traditions/">traditions</a>
       <a href="../sights/">Sights</a>
       <a href="../culture/">culture</a>
@@ -45,7 +45,7 @@
           </p>
           <div class="history-image-info-1">
             <img
-              src="/img/Flag_of_Hong_Kong2.svg"
+              src="../img/Flag_of_Hong_Kong2.svg"
               alt=""
               class="history-flag thumbnail"
             />
@@ -70,7 +70,7 @@
           </p>
           <div class="history-image-info-2">
             <img
-              src="/img/MapHongKong.png"
+              src="../img/MapHongKong.png"
               alt=""
               class="history-map thumbnail"
             />
@@ -97,7 +97,7 @@
           </p>
           <div class="history-image-info-3">
             <img
-              src="/img/hongkongbritain.webp"
+              src="../img/hongkongbritain.webp"
               alt=""
               class="history-hong-britain thumbnail"
             />
@@ -124,7 +124,7 @@
           </p>
           <div class="religion-image-info-1">
             <img
-              src="/img/Yin_yang.svg.png"
+              src="../img/Yin_yang.svg.png"
               alt=""
               class="religion-image-1 thumbnail"
             />
@@ -147,7 +147,7 @@
           </p>
           <div class="religion-image-info-2">
             <img
-              src="/img/Confucius_Statue_at_the_Confucius_Temple.jpg"
+              src="../img/Confucius_Statue_at_the_Confucius_Temple.jpg"
               alt=""
               class="religion-image-2 thumbnail"
             />
