ännu mer punkter

--- a/traditions/index.html
+++ b/traditions/index.html
@@ -14,8 +14,8 @@
   </head>
   <body class="trads-body">
     <header class="topnav" id="myTopnav">
-      <a href="./" id="homeBtn"></a>
-      <a href="./">Home</a>
+      <a href="../" id="homeBtn"></a>
+      <a href="../">Home</a>
       <a href="../traditions/" class="active">traditions</a>
       <a href="../sights/">Sights</a>
       <a href="../culture/">culture</a>
