ännu mer punkter

--- a/culture/index.html
+++ b/culture/index.html
@@ -180,7 +180,7 @@
           </p>
           <div class="food-image-info-1">
             <img
-              src="/img/Dim_sum.jpg"
+              src="../img/Dim_sum.jpg"
               alt=""
               class="food-dumplings thumbnail"
             />
@@ -202,7 +202,7 @@
           </p>
           <div class="food-image-info-2">
             <img
-              src="/img/Fishball.jpg"
+              src="../img/Fishball.jpg"
               alt=""
               class="food-fishballs thumbnail"
             />
@@ -225,7 +225,7 @@
           </p>
           <div class="food-image-info-3">
             <img
-              src="/img/eggwaffle.jpg"
+              src="../img/eggwaffle.jpg"
               alt=""
               class="food-eggwaffle thumbnail"
             />
