jävla massa punkter

--- a/culture/index.html
+++ b/culture/index.html
@@ -15,8 +15,8 @@
   </head>
   <body class="culture-body" id="Body">
     <header class="topnav" id="myTopnav">
-      <a href="./" id="homeBtn"></a>
-      <a href="./">Home</a>
+      <a href="../" id="homeBtn"></a>
+      <a href="../">Home</a>
       <a href="../traditions/">traditions</a>
       <a href="../sights/">Sights</a>
       <a href="../culture/">culture</a>
