--- a/traditions/index.html
+++ b/traditions/index.html
@@ -27,7 +27,7 @@
     <main class="trads-main">
       <!-- New Year -->
       <article class="trads-article trads-new-year">
-        <h2 id="T1" class="trads-h2">Chinese New Year</h2>
+        <h2 id="T1" class="trads-h2">Lunar New Year</h2>
         <div>
           <div>
             <!-- <section class="trads-section"> -->
@@ -53,7 +53,7 @@
             </p>
 
             <p class="trads-p">
-              The Spring Lantern Festival marks the end of the Chinese New Year.
+              The Spring Lantern Festival marks the end of the Lunar New Year.
               The whole city is decorated with colourful lanterns and a carnival
               is held at the Hong Kong Cultural Centre Piazza where you can see
               impressive lantern displays as well as other performances like
