löste validerings problem

--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <header class="topnav" id="myTopnav">
+    <nav class="topnav" id="myTopnav">
       <a href="../" id="homeBtn"></a>
       <a href="../">Home</a>
       <a href="../traditions/">traditions</a>
@@ -34,7 +34,7 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
-    </header>
+    </nav>
     <main>
       <h1>404 Site not Found</h1>
     </main>
