--- a/sights/index.html
+++ b/sights/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header class="topnav" id="myTopnav">
+    <nav class="topnav" id="myTopnav">
       <a href="../" id="homeBtn"></a>
       <a href="../">Home</a>
 
@@ -24,8 +24,8 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
-    </header>
-    <section class="SightSection" id="s1">
+    </nav>
+    <div class="SightSection" id="s1">
       <article>
         <figure>
           <img
@@ -45,12 +45,12 @@
           </figcaption>
         </figure>
         <div>
-          <h1>The Skyline</h1>
-          <h2>
+          <h2>The Skyline</h2>
+          <h3>
             The best places two to enjoy the beautiful skyline of Hong Kong are
             Victoria Peak and the Star Ferry ride along the waters surrounding
             the city.
-          </h2>
+          </h3>
           <p>
             Victoria Peak is the highest hill on the Island allowing for an
             incredible view of the energetic and noisy city and skyscrapers. The
@@ -67,9 +67,9 @@
           </p>
         </div>
       </article>
-    </section>
+    </div>
     <br />
-    <section class="SightSection" id="s2">
+    <div class="SightSection" id="s2">
       <article>
         <figure>
           <img
@@ -89,7 +89,7 @@
         </figure>
 
         <div>
-          <h1>Hong Kong Park</h1>
+          <h2>Hong Kong Park</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
             nihil obcaecati recusandae omnis delectus ad numquam id facilis
@@ -104,9 +104,9 @@
           </p>
         </div>
       </article>
-    </section>
+    </div>
     <br />
-    <section class="SightSection" id="s3">
+    <div class="SightSection" id="s3">
       <article>
         <figure>
           <img
@@ -126,7 +126,7 @@
           </figcaption>
         </figure>
         <div>
-          <h1>Big Buddha</h1>
+          <h2>Big Buddha</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
             nihil obcaecati recusandae omnis delectus ad numquam id facilis
@@ -141,7 +141,7 @@
           </p>
         </div>
       </article>
-    </section>
+    </div>
     <footer>
       <ul>
         <li>
@@ -169,6 +169,6 @@
         </li>
       </ul>
     </footer>
+    <script src="../src/index.js"></script>
   </body>
-  <script src="../src/index.js"></script>
 </html>
