--- a/traditions/index.html
+++ b/traditions/index.html
@@ -13,7 +13,7 @@
     <title>Traditions</title>
   </head>
   <body class="trads-body">
-    <header class="topnav" id="myTopnav">
+    <nav class="topnav" id="myTopnav">
       <a href="../" id="homeBtn"></a>
       <a href="../">Home</a>
       <a href="../traditions/" class="active">traditions</a>
@@ -22,7 +22,7 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
-    </header>
+    </nav>
 
     <main class="trads-main">
       <!-- New Year -->
