--- a/culture/index.html
+++ b/culture/index.html
@@ -14,7 +14,7 @@
     <title>Culture | Hong Kong</title>
   </head>
   <body class="culture-body" id="Body">
-    <header class="topnav" id="myTopnav">
+    <nav class="topnav" id="myTopnav">
       <a href="../" id="homeBtn"></a>
       <a href="../">Home</a>
       <a href="../traditions/">traditions</a>
@@ -23,7 +23,7 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
-    </header>
+    </nav>
 
     <div class="culture-container-main">
       <main class="culture-main">
@@ -32,7 +32,7 @@
         <article class="history-article-0">
           <h2 id="C1" class="history-main-title">History</h2>
         </article>
-        <article class="history-article-1">
+        <div class="history-article-1">
           <p class="history-article-1-text">
             Hong Kong exists as an administrative region in China. On July 1,
             1997 Britain returned Hong Kong to China and the region’s
@@ -58,9 +58,9 @@
               >, Public domain, via Wikimedia Commons
             </p>
           </div>
-        </article>
+        </div>
 
-        <article class="history-article-2">
+        <div class="history-article-2">
           <p class="history-article-2-text">
             The British Empire signed, together with China, on July 1, 1898, the
             Second Convention of Peking, which meant Britain was to lease the
@@ -83,9 +83,9 @@
               >, via Wikimedia Commons
             </p>
           </div>
-        </article>
+        </div>
 
-        <article class="history-article-3">
+        <div class="history-article-3">
           <p class="history-article-3-text">
             As the expiration day for the lease came closer Britain decided in
             1982 to negotiate the transition of the leased region. This further
@@ -105,14 +105,14 @@
               Photograph: Pierre-Antoine Donnet/AFP/Getty Images
             </p>
           </div>
-        </article>
+        </div>
 
         <!-- Religion -->
 
         <article class="religion-article-0">
           <h2 id="C2" class="religion-main-title">Religion</h2>
         </article>
-        <article class="religion-article-1">
+        <div class="religion-article-1">
           <p class="religion-article-1-text">
             The major religions in Hong Kong are Taoism, Christianity and
             Buddhism. The smaller religions in Hong Kong mainly consist of
@@ -134,9 +134,9 @@
               >, Public domain, via Wikimedia Commons
             </p>
           </div>
-        </article>
+        </div>
 
-        <article class="religion-article-2">
+        <div class="religion-article-2">
           <p class="religion-article-2-text">
             The Philosophy of Confucianism is based on human relationships. All
             relationships are unequal and people should therefore live in
@@ -164,14 +164,14 @@
               >, via Wikimedia Commons
             </p>
           </div>
-        </article>
+        </div>
 
         <!-- Food -->
 
         <article class="food-article-0">
           <h2 id="C3" class="food-main-title">Food</h2>
         </article>
-        <article class="food-article-1">
+        <div class="food-article-1">
           <p class="food-article-1-text">
             There are many different traditional foods in Hong Kong, such as dim
             sum, fish balls, egg waffles and pineapple buns. Dim sum consists of
@@ -193,9 +193,9 @@
               >, via Wikimedia Commons
             </p>
           </div>
-        </article>
+        </div>
 
-        <article class="food-article-2">
+        <div class="food-article-2">
           <p class="food-article-2-text">
             Fish balls is a common street food in Hong Kong, it is made with
             fish and fried in curry.
@@ -215,9 +215,9 @@
               >, via Wikimedia Commons
             </p>
           </div>
-        </article>
+        </div>
 
-        <article class="food-article-3">
+        <div class="food-article-3">
           <p class="food-article-3-text">
             Egg waffles is Hong Kong’s own version of the traditional waffle.
             These egg waffles have a crispy exterior and a soft sponge-like
@@ -238,7 +238,7 @@
               >
             </p>
           </div>
-        </article>
+        </div>
       </main>
 
       <footer>
