--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <header class="topnav" id="myTopnav">
+    <nav class="topnav" id="myTopnav">
       <a href="./" id="homeBtn"></a>
       <a href="./" class="active">Home</a>
       <a href="./traditions/">traditions</a>
@@ -25,7 +25,7 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
-    </header>
+    </nav>
     <main>
       <article>
         <div class="MainThumbnail">
